--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ branding:
   color: 'blue'
 inputs:
   spotbugs-version:
-    description: 'SpotBugs version to use.'
+    description: 'SpotBugs version to use. Default: latest.'
     default: 'latest'
     required: false  
   packages:
@@ -49,6 +49,10 @@ inputs:
       The basePath is used as a prefix in the sarif file to help GitHub find the
       right file of the issue. It is tipically something like 'src/main/java'.
     required: false
+  progress:
+    description: >
+      Set it to true to enable showing progress.
+    required: false
 runs:
   using: "composite"
   steps: 
@@ -64,3 +68,4 @@ runs:
         TARGET: ${{ inputs.target }}
         DEPENDENCIES_PATH: ${{ inputs.dependenciesPath }}
         BASE_PATH: ${{ inputs.basePath }}
+        PROGRESS: ${{ inputs.progress }}
